fix: update workspace folder path in devcontainer and install git in Dockerfile

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
   "name": "Controle Contas Dev",
   "dockerComposeFile": "../docker-compose.yml",
   "service": "backend",
-  "workspaceFolder": "/personal-finance-app",
+  "workspaceFolder": "/workspaces/personal-finance-app",
   "customizations": {
     "vscode": {
       "settings": {
