--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,7 @@ COPY package.json package-lock.json* ./
 COPY tsconfig.json ./
 
 # Instala dependências
+RUN apk add --no-cache git
 RUN npm install
 
 # Copia o restante do projeto
