feat: add task configuration for starting backend development

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,5 +15,6 @@
         "ms-azuretools.vscode-docker"
       ]
     }
-  }
+  },
+  "postStartCommand": "code --command workbench.action.tasks.runTask --args 'Start Backend Dev'"
 }
