feat: initialize backend with user authentication and debt management
- Add package.json with dependencies and scripts for development
- Create Prisma schema for User, DebtSource, Debt, and Installment models
- Implement user registration and login controllers with JWT authentication
- Set up Express server with user routes and middleware for authentication
- Add validation for user input using Joi
- Configure TypeScript with strict settings and output directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Node modules
-backend/node_modules
+/node_modules
 
 # Ambiente do container
-backend/.env
+.env
 
 # Prisma
-backend/prisma/dev.db
-backend/prisma/dev.db-journal
+/prisma/dev.db
+/prisma/dev.db-journal
 
 # Migrations temporárias (se não quiser versionar)
 # backend/prisma/migrations/
