--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
-    "dotenv": "^16.0.3",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.3.1",
     "eslint": "^8.45.0",
