--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write .",
     "build": "tsc",
     "start": "node dist/index.js",
-    "restart": "npx prisma generate npx prisma migrate deploy"
+    "restart": "npx prisma generate npx prisma migrate deploy npx prisma db seed",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
