--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "restart": "npm run db:reset && npm run db:migrate && npm run db:seed",
     "db:reset": "npx prisma migrate reset --force",
     "db:migrate": "npx prisma migrate deploy",
-    "db:seed": "ts-node prisma/seed.ts",
-    "postinstall": "npx prisma generate"
+    "db:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
