feat: refactor error handling; replace handleError utility with BaseError class and update related imports

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,7 @@
         "esbenp.prettier-vscode",
         "dbaeumer.vscode-eslint",
         "Prisma.prisma",
+        "cweijan.vscode-database-client2",
         "ms-azuretools.vscode-docker"
       ]
     }
