--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://{POSTGRES_USER}:{POSTGRES_PASSWORD}@postgres:5432/{POSTGRES_DB}
+DATABASE_URL=postgres://<DB_USER>:<DB_PASSWORD>@postgres:5432/<DB_NAME>
 JWT_SECRET=<YOUR_SECRET>
 NODE_ENV=development
 POSTGRES_USER=<DB_USER>
