--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "restart": "npm run db:reset && npm run db:migrate && npm run db:seed",
     "db:reset": "npx prisma migrate reset --force",
     "db:migrate": "npx prisma migrate deploy",
-    "db:seed": "ts-node prisma/seed.ts"
+    "db:seed": "ts-node prisma/seed.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
@@ -32,6 +33,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.3.1",
@@ -39,8 +41,10 @@
     "@types/swagger-ui-express": "^4.1.8",
     "@types/yamljs": "^0.2.34",
     "eslint": "^8.45.0",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
     "prisma": "^6.6.0",
+    "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.0"
   }
