--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "db:reset": "npx prisma migrate reset --force",
     "db:migrate": "npx prisma migrate deploy",
     "db:seed": "ts-node prisma/seed.ts",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "coverage:open": "xdg-open coverage/lcov-report/index.html",
+    "test:coverage:open": "npm run test:coverage && npm run coverage:open",
+    "test:watch": "jest --watchAll",
+    "test:watch:coverage": "jest --watchAll --coverage"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
