--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DATABASE_URL=postgres://<DB_USER>:<DB_PASSWORD>@postgres:5432/<DB_NAME>
 JWT_SECRET=<YOUR_SECRET>
+JWT_SECRET_REFRESH=<YOUR_REFRESH_SECRET>
 NODE_ENV=development
 POSTGRES_USER=<DB_USER>
 POSTGRES_PASSWORD=<DB_PASSWORD>
