--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "helmet": "^8.1.0",
-    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
@@ -34,6 +33,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
@@ -45,12 +45,14 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/yamljs": "^0.2.34",
-    "eslint": "^8.45.0",
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0",
     "jest": "^29.7.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.0"
+    "typescript": "^5.2.0",
+    "typescript-eslint": "^8.34.0"
   }
 }
