--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "Controle Contas Dev",
   "dockerComposeFile": "../docker-compose.yml",
-  "service": "backend",
+  "service": "backend_app",
   "workspaceFolder": "/workspaces/personal-finance-app",
   "customizations": {
     "vscode": {
