--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "restart": "npm run db:reset && npm run db:migrate && npm run db:seed",
-    "db:reset": "npx prisma migrate reset --force",
-    "db:migrate": "npx prisma migrate deploy",
-    "db:seed": "ts-node prisma/seed.ts",
+    "reset": "npx prisma migrate reset --force",
+    "migrate": "./scripts/makemigrate.sh",
+    "seed": "ts-node prisma/seed.ts",
+    "studio": "npx prisma studio",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watchAll",
