--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --clear src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --clear --require tsconfig-paths/register src/index.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "build": "tsc",
     "start": "node dist/index.js",
-    "restart": "npm run db:reset && npm run db:migrate && npm run db:seed",
+    "restart": "npm run reset && npx prisma migrate dev && npm run seed",
     "reset": "npx prisma migrate reset --force",
     "migrate": "./scripts/makemigrate.sh",
     "seed": "ts-node prisma/seed.ts",
@@ -53,6 +53,7 @@
     "prisma": "^6.6.0",
     "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.0",
     "typescript-eslint": "^8.34.0"
   }
